--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -155,3 +155,10 @@ h4.bda {
     display: flex;
     justify-content: center;
 }
+
+.mockupdiv {
+    /* min-width: 1920px; */
+    max-width: 100%;
+    height: 864px;
+    background-color: #E5E6E8;
+}
