--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -97,9 +97,103 @@ ul.defineDescription {
     padding-bottom: 30px;
 }
 
-img {
+img.personaImg {
     max-width: 100%;
     min-width: 100px;
     height: auto;
     vertical-align: middle;
 }
+
+body{
+    font-family: "Open Sans", sans-serif;
+}
+
+img.aboutImg {
+    max-width: 100%;
+    min-width: 100px;
+    height: auto;
+    vertical-align: middle;
+}
+
+div.container-fluid .aboutSection {
+    background-color: white;
+    color: rgb(47, 39, 77);
+}
+
+h1.mainHeader {
+    font-weight: bold;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: rgb(47, 39, 77);
+ }
+ /* Section Circle */
+ .counter {
+    padding-top: 40px;
+    padding-bottom: 40px;
+ }
+ .counter .one {
+   position: relative;
+   border: 7px solid rgb(47, 39, 77);
+   background-color: rgb(47, 39, 77);
+   border-radius: 50%;
+   width: 190px;
+   height: 190px;
+   padding: 40px 12px;
+   text-align: center;
+ }
+.one h3 {
+    font-weight: bold;
+    color: white;
+    text-align: center;
+ }
+  /* Section About */
+  .sectionAbout { 
+    padding-top: 40px;
+    padding-bottom: 40px;
+ }
+  .sectionAbout .head {
+    text-align: center;
+  }
+  .sectionAbout .head .h1 {
+    padding-bottom: 25px;
+    font-size: 40px;
+    font-weight: bold;
+    font-style: italic;
+  }
+  .sectionAbout .head p {
+    font-size: 24px;
+    font-weight: 300;
+  }
+ /* Section Features */
+ .featureSection {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: #6DB6A1;
+ }
+ .featureSection h1{
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  padding-top: 40px;
+  color: white;
+  font-style: italic;
+ }
+ .featureSection .section{
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
+ }
+ .featureSection .section:hover i{
+  background-color: rgb(47, 39, 77);
+ }
+ .featureSection .section i{
+  background-color: white;
+  width: 70px;
+  height: 70px;
+  padding-top: 20px;
+  font-size: 30px;
+  color: #6DB6A1;
+  border-radius: 50%;
+  transition: all .7s ease-in-out;
+ }
