--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -157,8 +157,7 @@ h4.bda {
 }
 
 .mockupdiv {
-    /* min-width: 1920px; */
-    max-width: 100%;
-    height: 864px;
-    background-color: #E5E6E8;
+    width: 100%;
+    background-color: #F5F5F5;
+    background-image: url();
 }
