--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -121,10 +121,32 @@ h1.sectionTitle {
 
 /* } */
 
+.sectionBox {
+    width: fit-content;
+    height: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+h1.sectionHeader {
+    font-weight: bold;
+    text-align: center;
+    color:#242080;
+ }
+
+ h4.sectionSubhead {
+     font-weight: bold;
+     text-align: center;
+     color: #59b9b5;
+ }
+
 .creditBox {
     min-width: 100%;
     min-height: fit-content;
     background-color: #F5F5F5;
+}
+
+.textBox {
     padding-bottom: 50px;
     padding-top: 50px;
 }
@@ -137,6 +159,13 @@ h6.memberName {
 }
 
 p.roleList {
+    color: #242080;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+h6.roleList {
     color: #242080;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
