--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -107,16 +107,24 @@ img.personaImg {
 .sectionBox {
     max-width: 100%;
     min-width: 100%;
-    min-height: 460px;
-    background-color: #F5F5F5;
+    min-height: fit-content;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
-h1.sectionTitle {
+h1.sectionHeader {
     color: #242080;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 100px !important;
+    font-size: 40px;
+    font-weight: bold;
     text-align: center;
-    font-style: bold;
+}
+
+h4.sectionSubhead {
+    color: #59B9B5;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .creditBox {
