--- a/assets/css/productivityApp.css
+++ b/assets/css/productivityApp.css
@@ -1,5 +1,5 @@
 .navbar{
-	background: #00cfcf;
+	background: #59B9B5;
 }
 div.container-fluid.researchSection {
     background-color: rgb(71, 61, 131);
